Added font, restructured directory

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,6 @@
 .container {
   padding: 0 2rem;
+  background-image: linear-gradient(to bottom, #ffefb0 , #FFFFFF);
 }
 
 .main {
@@ -10,6 +11,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.header {
+  display: flex;
+  flex: 1;
+  padding: 2rem 0;
+  border-top: 1px solid #ebd6d6;
+  justify-content: right;
+  align-items: center;
+}
+
+.header a {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .footer {
@@ -43,6 +60,9 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  letter-spacing: 8px;
+  display: flex;
+  align-items:center;
 }
 
 .title,
