--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,10 +8,18 @@
 
 html,
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, RopaSans, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+#__next {
+  height: 100%;
+}
+#map {
+  height: 100%;
 }
 
 a {
