--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@ body {
   margin: 0;
   font-family: -apple-system, RopaSans, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  min-width:600px;
 }
 
 #__next {
